--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.16",
     "nodemon": "^2.0.4"
   }
