--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.20",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "uuid": "^8.2.0"
   }
 }
