--- a/frontend/package.json
+++ b/frontend/package.json
@@ -147,5 +147,6 @@
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.0"
-  }
+  },
+  "proxy": "http://localhost:4000" 
 }
