--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,9 @@
     "react-bootstrap": "^1.0.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "semver": "6.3.0",
@@ -148,5 +150,5 @@
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.0"
   },
-  "proxy": "http://localhost:4000" 
+  "proxy": "http://localhost:4000"
 }
